--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=BlynkEThernet_WiFiManager
+name=BlynkEthernet_WiFiManager
 version=1.0.4
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
-sentence=Simple WiFiManager for Blynk and AVR Mega/UNO/Nano with or without SSL, configuration data saved in EEPROM
+sentence=Simple WiFiManager for Blynk and AVR Mega/UNO/Nano boards, with or without SSL, configuration data saved in EEPROM
 paragraph=Library for configuring/auto(re)connecting Ethernet W5X00 modules to Ethernet and Blynk at runtime.
 category=Communication
 url=https://github.com/khoih-prog/BlynkEthernet_WM
