--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ sentence=Simple Ethernet Manager for Blynk and AVR Mega boards, with or without 
 paragraph=Library for configuring/auto(re)connecting Ethernet W5X00 modules to Ethernet and Blynk at runtime.
 category=Communication
 url=https://github.com/khoih-prog/BlynkEthernet_WM
-architectures=avr
+architectures=*
 depends=Blynk
