--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
 name=BlynkEthernet_Manager
-version=1.0.5
+version=1.0.6
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
-sentence=Simple Ethernet Manager for Blynk and AVR Mega boards, with or without SSL, configuration data saved in EEPROM
-paragraph=Library for configuring/auto(re)connecting Ethernet W5X00 modules to Ethernet and Blynk at runtime.
+sentence=Simple Ethernet Manager for Blynk and AVR Mega, Teensy, etc. boards, with or without SSL, configuration data saved in EEPROM
+paragraph=Library for configuring/auto(re)connecting Ethernet W5X00 and ENC28J60 Ethernet shields to Ethernet and Blynk at runtime.
 category=Communication
 url=https://github.com/khoih-prog/BlynkEthernet_WM
-architectures=*
+architectures=avr
 depends=Blynk
