--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ sentence=Simple Ethernet Manager for Blynk and AVR Mega, Teensy, etc. boards, wi
 paragraph=Library for configuring/auto(re)connecting Ethernet W5X00 and ENC28J60 Ethernet shields to Ethernet and Blynk at runtime.
 category=Communication
 url=https://github.com/khoih-prog/BlynkEthernet_WM
-architectures=avr
+architectures=*
 depends=Blynk
