--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=BlynkEthernet_Manager
-version=1.0.8
+version=1.0.9
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
-sentence=Simple Ethernet Manager for Blynk and AVR Mega, Teensy, SAM DUE, SAMD, etc. boards, with or without SSL, configuration data saved in EEPROM, or FlashStorage
+sentence=Simple Ethernet Manager for Blynk and AVR Mega, Teensy, SAM DUE, SAMD, etc. boards, with or without SSL, configuration data saved in EEPROM, DueFlashStorage or FlashStorage
 paragraph=Library for configuring/auto(re)connecting Ethernet W5X00 and ENC28J60 Ethernet shields to Ethernet and Blynk at runtime.
 category=Communication
 url=https://github.com/khoih-prog/BlynkEthernet_WM
