--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=BlynkEthernet_Manager
-version=1.0.11
+version=1.0.12
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
-sentence=Simple Ethernet Manager for MultiBlynk for AVR Mega, Teensy, SAM DUE, SAMD, etc. boards, with or without SSL, configuration data saved in EEPROM, DueFlashStorage or FlashStorage.
-paragraph=Library for configuring/auto(re)connecting Ethernet W5X00 and ENC28J60 Ethernet shields to Ethernet and MultiBlynk at runtime. New powerful-yet-simple-to-use feature to enable adding dynamic custom parameters from sketch and input using the same Config Portal. Config Portal will be auto-adjusted to match the number of dynamic parameters.
+sentence=Simple Ethernet Manager for MultiBlynk for Teensy, SAM DUE, SAMD, etc. boards, with or without SSL, configuration data saved in EEPROM, DueFlashStorage or FlashStorage.
+paragraph=Library for configuring/auto(re)connecting Ethernet W5200/W5500 and ENC28J60 Ethernet shields to Ethernet and MultiBlynk at runtime. New powerful-yet-simple-to-use feature to enable adding dynamic custom parameters from sketch and input using the same Config Portal. Config Portal will be auto-adjusted to match the number of dynamic parameters.
 category=Communication
 url=https://github.com/khoih-prog/BlynkEthernet_WM
 architectures=*
