--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ paragraph=Library for configuring/auto(re)connecting Ethernet W5100/W5200/W5500 
 category=Communication
 url=https://github.com/khoih-prog/BlynkEthernet_WM
 architectures=*
-depends=Blynk,EthernetWebServer,DoubleResetDetector_Generic,ESP_DoubleResetDetector
+depends=Blynk,EthernetWebServer,DoubleResetDetector_Generic,ESP_DoubleResetDetector,Functional-Vlpp
