--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -30,13 +30,19 @@ upload_speed = 921600
 ;monitor_port = COM11
 
 lib_deps =
+; PlatformIO 4.x
   Blynk@~0.6.1
-  EthernetWebServer@~1.0.11
+  EthernetWebServer@~1.0.13
   ESP_DoubleResetDetector@~1.0.3
   DoubleResetDetector_Generic@~1.0.2
   Functional-Vlpp@~1.0.1
+; PlatformIO 5.x 
+; blynkkk/Blynk@~0.6.1
+; khoih-prog/EthernetWebServer@~1.0.13
+; khoih-prog/ESP_DoubleResetDetector@~1.0.3  
+; khoih-prog/DoubleResetDetector_Generic@~1.0.2
+; khoih-prog/Functional-Vlpp@~1.0.1
   
-
 build_flags =
 ; set your debug output (default=Serial)
 ; -D DEBUG_ESP_PORT=Serial
