Update Packages_Patches for Arduino SAMD v1.8.10
Update Packages_Patches for Arduino SAMD v1.8.10

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -31,17 +31,17 @@ upload_speed = 921600
 
 lib_deps =
 ; PlatformIO 4.x
-  Blynk@~0.6.1
-  EthernetWebServer@~1.0.13
-  ESP_DoubleResetDetector@~1.0.3
-  DoubleResetDetector_Generic@~1.0.2
-  Functional-Vlpp@~1.0.1
+  Blynk@>=0.6.1
+  EthernetWebServer@>=1.2.0
+  ESP_DoubleResetDetector@>=1.1.0
+  DoubleResetDetector_Generic@>=1.0.2
+  Functional-Vlpp@>=1.0.1
 ; PlatformIO 5.x 
-; blynkkk/Blynk@~0.6.1
-; khoih-prog/EthernetWebServer@~1.0.13
-; khoih-prog/ESP_DoubleResetDetector@~1.0.3  
-; khoih-prog/DoubleResetDetector_Generic@~1.0.2
-; khoih-prog/Functional-Vlpp@~1.0.1
+; blynkkk/Blynk@>=0.6.1
+; khoih-prog/EthernetWebServer@>=1.2.0
+; khoih-prog/ESP_DoubleResetDetector@>=1.1.0  
+; khoih-prog/DoubleResetDetector_Generic@>=1.0.2
+; khoih-prog/Functional-Vlpp@>=1.0.1
   
 build_flags =
 ; set your debug output (default=Serial)
