--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=BlynkEthernet_Manager
-version=1.1.0
+version=1.2.0
 author=Khoi Hoang
 license=MIT
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
@@ -8,4 +8,4 @@ paragraph=Library for configuring/auto(re)connecting Ethernet W5100/W5200/W5500,
 category=Communication
 url=https://github.com/khoih-prog/BlynkEthernet_WM
 architectures=*
-depends=Blynk,EthernetWebServer,DoubleResetDetector_Generic,ESP_DoubleResetDetector,Functional-Vlpp
+depends=Blynk,EthernetWebServer,DoubleResetDetector_Generic,ESP_DoubleResetDetector,Functional-Vlpp,FlashStorage_SAMD,LittleFS_esp32
