--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -32,16 +32,18 @@ upload_speed = 921600
 lib_deps =
 ; PlatformIO 4.x
   Blynk@>=0.6.1
-  EthernetWebServer@>=1.2.1
+  EthernetWebServer@>=1.3.0
   ESP_DoubleResetDetector@>=1.1.1
   DoubleResetDetector_Generic@>=1.0.3
   Functional-Vlpp@>=1.0.1
+  FlashStorage_SAMD@>=1.1.0
 ; PlatformIO 5.x 
 ; blynkkk/Blynk@>=0.6.1
-; khoih-prog/EthernetWebServer@>=1.2.1
+; khoih-prog/EthernetWebServer@>=1.3.0
 ; khoih.prog/ESP_DoubleResetDetector@>=1.1.1
 ; khoih-prog/DoubleResetDetector_Generic@>=1.0.3
 ; khoih-prog/Functional-Vlpp@>=1.0.1
+; khoih.prog/FlashStorage_SAMD@>=1.1.0
   
 build_flags =
 ; set your debug output (default=Serial)
