--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -29,21 +29,24 @@ upload_speed = 921600
 ;monitor_speed = 9600
 ;monitor_port = COM11
 
+; Checks for the compatibility with frameworks and dev/platforms
+lib_compat_mode = strict
+
 lib_deps =
 ; PlatformIO 4.x
   Blynk@>=0.6.1
-  EthernetWebServer@>=1.5.0
+  EthernetWebServer@>=1.7.0
   ESP_DoubleResetDetector@>=1.1.1
-  DoubleResetDetector_Generic@>=1.4.0
+  DoubleResetDetector_Generic@>=1.7.2
   Functional-Vlpp@>=1.0.2
-  FlashStorage_SAMD@>=1.1.0
+  FlashStorage_SAMD@>=1.2.0
 ; PlatformIO 5.x 
 ; blynkkk/Blynk@>=0.6.1
-; khoih-prog/EthernetWebServer@>=1.5.0
+; khoih-prog/EthernetWebServer@>=1.7.0
 ; khoih.prog/ESP_DoubleResetDetector@>=1.1.1
-; khoih-prog/DoubleResetDetector_Generic@>=1.2.0
+; khoih-prog/DoubleResetDetector_Generic@>=1.7.2
 ; khoih-prog/Functional-Vlpp@>=1.0.2
-; khoih.prog/FlashStorage_SAMD@>=1.1.0
+; khoih.prog/FlashStorage_SAMD@>=1.2.0
   
 build_flags =
 ; set your debug output (default=Serial)
@@ -98,7 +101,7 @@ board = nodemcuv2
 
 [env:ESP32]
 platform = espressif32
-framework = arduino
+framework = arduino, espidf
 ; ============================================================
 ; Board configuration
 ; choose your board by uncommenting one of the following lines
